<resources>
    <string name="app_name">Mark Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="mark_sem_hint">Enter semester</string>
    <string name="mark_sem_label">Semester</string>
    <string name="mark_subjectamt_label">Subject Amount</string>
    <string name="mark_subjectamt_hint">Enter subject amount</string>
    <string name="mark_date_label">Semester Date</string>
    <string name="mark_date_label2">Date Added</string>
    <string name="new_mark">Add Result</string>
    <string name="markfragment_name">Details</string>
    <string name="delete_mark">Delete</string>
    <string name="date_picker_title">Semester Session</string>
    <string name="mark_gpa_label">My GPA</string>
    <string name="mark_gpa_hint">Pending</string>
    <string name="mark_proceed">Add Result</string>
    <string name="markcalculatefragment_name">Calculate</string>
    <string name="credithour">Credit Hr</string>
    <string name="score">Subject Score</string>
    <string name="score1">Enter Score 1</string>
    <string name="credit1">Credit 1</string>
    <string name="score2">Enter Score 2</string>
    <string name="credit2">Credit 2</string>
    <string name="score3">Enter Score 3</string>
    <string name="credit3">Credit 3</string>
    <string name="score5">Enter Score 5</string>
    <string name="credit4">Credit 4</string>
    <string name="score4">Enter Score 4</string>
    <string name="credit5">Credit 5</string>
    <string name="score6">Enter Score 6</string>
    <string name="credit6">Credit 6</string>
    <string name="calculate_text">Calculate</string>
    <string name="marklistfragment_name">Record List</string>
    <string name="edit_profile">Edit\nProfile</string>
    <string name="view_result">View\nResult</string>
    <string name="profile_name">Name :</string>
    <string name="profile_id">Student ID :</string>
    <string name="profile_course">Course :</string>
    <string name="profile_name_hint">Enter Name</string>
    <string name="profile_id_hint">Enter ID</string>
    <string name="profile_course_hint">Enter Course</string>
    <string name="profile_sem">Session :</string>
    <string name="profile_sem_hint">Enter Session</string>
    <string name="edit_profile_2">Done</string>
    <string name="share_mark">Share</string>
    <string name="mark_report">Semester %1$s Report\nSession : %2$s\nMy GPA : %3$s</string>
    <string name="send_report">Send report via</string>
    <string name="markachievementfragment_name">Achievement</string>
    <string name="achievement">Achievement</string>
    <string name="achievement_label">Achievement</string>
    <string name="achievement1">Achieved 3.5 GPA</string>
    <string name="achievement2">Completed 3 Subjects</string>
    <string name="achievement3">Achieved 2.5 GPA</string>
    <string name="achievement4">Completed Semester</string>
    <string name="achievement5">Recorded 5 GPA</string>
    <string name="achievement6">Recorded 4 GPA</string>

</resources>
