<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scorename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="20sp"
            android:textAlignment="center"
            android:theme="@style/MyHintText"
            android:padding="15dp"
            android:text="@string/score"/>

        <TextView
            android:id="@+id/credithour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="13dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:theme="@style/MyHintText"
            android:text="@string/credithour"/>

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/score1"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/credit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:hint="@string/credit1"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/score2"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/credit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:hint="@string/credit2"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/score3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/score3"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/credit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:hint="@string/credit3"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/score4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/score4"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/credit4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:hint="@string/credit4"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/score5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/score5"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/credit5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:hint="@string/credit5"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/score6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:hint="@string/score6"
            android:textAlignment="center"
            android:layout_weight="3"/>

        <EditText
            android:id="@+id/credit6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:hint="@string/credit6"
            android:textAlignment="center"
            android:layout_weight="1"/>
    </TableRow>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/calculate_text"/>

</LinearLayout>