<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_sem_label"
        android:textSize="20sp"
        android:theme="@style/MyHintText"
        android:paddingStart="15dp"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/mark_sem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:hint="@string/mark_sem_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_subjectamt_label"
        android:textSize="20sp"
        android:theme="@style/MyHintText"
        android:paddingStart="15dp"
        android:paddingTop="5dp"/>

    <EditText
        android:id="@+id/mark_subjectamt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:hint="@string/mark_subjectamt_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_date_label"
        android:textSize="20sp"
        android:theme="@style/MyHintText"
        android:paddingStart="15dp"
        android:paddingTop="5dp"/>

    <Button
        android:id="@+id/mark_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/mark_gpa_label"
        android:textSize="20sp"
        android:theme="@style/MyHintText"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/mark_gpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:hint="@string/mark_gpa_hint"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mark_date_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginStart="17dp"
            android:layout_weight="1"
            android:textStyle="italic"
            tools:text="Date added"/>

        <Button
            android:id="@+id/mark_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_weight="1"
            android:layout_marginEnd="17dp"
            android:text="@string/mark_proceed"/>

    </LinearLayout>
</LinearLayout>