<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:background="@drawable/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:paddingStart="20dp"
            android:paddingTop="15dp"/>

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name_hint"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_id"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:paddingStart="20dp"
            android:paddingTop="30dp"/>

        <EditText
            android:id="@+id/profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_id_hint"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_course"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:paddingStart="20dp"
            android:paddingTop="30dp"/>

        <EditText
            android:id="@+id/profile_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_course_hint"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_sem"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:paddingStart="20dp"
            android:paddingTop="30dp"/>

        <EditText
            android:id="@+id/profile_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_sem_hint"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_light">

        <Button
            android:id="@+id/edit_profile"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/view_result"
            android:text="@string/view_result"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/button"/>

    </LinearLayout>

</LinearLayout>