<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievement1"
                android:textSize="20sp"
                android:theme="@style/MyHintText"
                android:paddingStart="15dp"
                android:paddingTop="10dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check1"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievement2"
                android:textSize="20sp"
                android:theme="@style/MyHintText"
                android:paddingStart="15dp"
                android:paddingTop="30dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievement3"
                android:textSize="20sp"
                android:theme="@style/MyHintText"
                android:paddingStart="15dp"
                android:paddingTop="30dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check3"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievement4"
                android:textSize="20sp"
                android:theme="@style/MyHintText"
                android:paddingStart="15dp"
                android:paddingTop="30dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check4"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievement5"
                android:textSize="20sp"
                android:theme="@style/MyHintText"
                android:paddingStart="15dp"
                android:paddingTop="30dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check5"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_red_light"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/achievement6"
                android:textSize="20sp"
                android:theme="@style/MyHintText"
                android:paddingStart="15dp"
                android:paddingTop="30dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/check6"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>